--- a/charts/shkeeper/templates/persistentvolumeclaims/tron-shkeeper.yaml
+++ b/charts/shkeeper/templates/persistentvolumeclaims/tron-shkeeper.yaml
@@ -10,7 +10,7 @@ spec:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: {{ .Values.tron_shkeeper.storage | default "1Gi" }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -23,5 +23,5 @@ spec:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: {{ .Values.tron_shkeeper.redis_storage | default "1Gi" }}
 {{- end }}
