--- a/charts/shkeeper/templates/monero/monero-wallet-rpc/pvc.yaml
+++ b/charts/shkeeper/templates/monero/monero-wallet-rpc/pvc.yaml
@@ -10,5 +10,5 @@ spec:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
+      storage: {{ .Values.monero.storage | default "10Gi" }}
 {{- end }}
