--- a/charts/shkeeper/templates/persistentvolumeclaims/ethereum-fullnode.yaml
+++ b/charts/shkeeper/templates/persistentvolumeclaims/ethereum-fullnode.yaml
@@ -10,5 +10,5 @@ spec:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 1000Gi
+      storage: {{ .Values.eth_fullnode.storage | default "1000Gi" }}
 {{- end }}
