use .Release.Namespace instead of hardcoded .Values.Namespace

--- a/charts/shkeeper/templates/deployments/bnb-shkeeper.yaml
+++ b/charts/shkeeper/templates/deployments/bnb-shkeeper.yaml
@@ -4,7 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: bnb-shkeeper
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app: bnb-shkeeper
 spec:
