--- a/charts/shkeeper/templates/bitcoin-lightning/lnd/deploy.yaml
+++ b/charts/shkeeper/templates/bitcoin-lightning/lnd/deploy.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: lightning-lnd
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app: lightning-lnd
 spec:
