--- a/charts/shkeeper/templates/bitcoin-lightning/lnd/svc.yaml
+++ b/charts/shkeeper/templates/bitcoin-lightning/lnd/svc.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: lightning-lnd-p2p
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   selector:
     app: lightning-lnd
@@ -18,7 +18,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: lightning-lnd-rest
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   selector:
     app: lightning-lnd
