--- a/charts/shkeeper/templates/bitcoin-lightning/rtl/deploy.yaml
+++ b/charts/shkeeper/templates/bitcoin-lightning/rtl/deploy.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: lightning-rtl
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app: lightning-rtl
 spec:
