--- a/charts/shkeeper/templates/bitcoin-lightning/rtl/svc.yaml
+++ b/charts/shkeeper/templates/bitcoin-lightning/rtl/svc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: lightning-rtl
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   selector:
     app: lightning-rtl
