--- a/charts/shkeeper/templates/configmaps/ethereum-fullnode-nginx.yaml
+++ b/charts/shkeeper/templates/configmaps/ethereum-fullnode-nginx.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: ethereum-nginx-config
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 data:
   default.conf.template: |
     server {
