--- a/charts/shkeeper/templates/configmaps/nginx.yaml
+++ b/charts/shkeeper/templates/configmaps/nginx.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-config
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 data:
   default.conf.template: |
     server {
