--- a/charts/shkeeper/templates/configmaps/xrp-fullnode-rippled.yaml
+++ b/charts/shkeeper/templates/configmaps/xrp-fullnode-rippled.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: xrp-fullnode-config
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 data:
   rippled.cfg: |
     [server]
