--- a/charts/shkeeper/templates/deployments/avalanche-fullnode.yaml
+++ b/charts/shkeeper/templates/deployments/avalanche-fullnode.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: avalanche
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app: avalanche
 spec:
