--- a/charts/shkeeper/templates/deployments/avalanche-shkeeper.yaml
+++ b/charts/shkeeper/templates/deployments/avalanche-shkeeper.yaml
@@ -4,7 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: avalanche-shkeeper
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app: avalanche-shkeeper
 spec:
