--- a/charts/shkeeper/templates/deployments/bitcoind.yaml
+++ b/charts/shkeeper/templates/deployments/bitcoind.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: bitcoind-deployment
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app: bitcoind
 spec:
