--- a/charts/shkeeper/templates/deployments/dogecoind.yaml
+++ b/charts/shkeeper/templates/deployments/dogecoind.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: dogecoind-deployment
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app: dogecoind
 spec:
