--- a/charts/shkeeper/templates/deployments/litecoind.yaml
+++ b/charts/shkeeper/templates/deployments/litecoind.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: litecoind-deployment
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app: litecoind
 spec:
