--- a/charts/shkeeper/templates/deployments/shkeeper.yaml
+++ b/charts/shkeeper/templates/deployments/shkeeper.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: shkeeper-deployment
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app.kubernetes.io/instance: shkeeper-vsys
     app.kubernetes.io/name: shkeeper
