--- a/charts/shkeeper/templates/deployments/tron-fullnode.yaml
+++ b/charts/shkeeper/templates/deployments/tron-fullnode.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: java-tron
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app: java-tron
 spec:
