--- a/charts/shkeeper/templates/monero/monero-wallet-rpc/pvc.yaml
+++ b/charts/shkeeper/templates/monero/monero-wallet-rpc/pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: monero-wallet-rpc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   storageClassName: {{ .Values.storageClassName }}
   accessModes:
