--- a/charts/shkeeper/templates/monero/monero-wallet-rpc/secret.yaml
+++ b/charts/shkeeper/templates/monero/monero-wallet-rpc/secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: monero-wallet-rpc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   annotations:
     secret-generator.v1.mittwald.de/autogenerate: password
 data:
