--- a/charts/shkeeper/templates/monero/monero-wallet-rpc/svc.yaml
+++ b/charts/shkeeper/templates/monero/monero-wallet-rpc/svc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: monero-wallet-rpc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   selector:
     app: monero-wallet-rpc
