--- a/charts/shkeeper/templates/monero/monerod/deploy.yaml
+++ b/charts/shkeeper/templates/monero/monerod/deploy.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: monerod
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app: monerod
 spec:
