--- a/charts/shkeeper/templates/monero/monerod/svc.yaml
+++ b/charts/shkeeper/templates/monero/monerod/svc.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: monerod
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   selector:
     app: monerod
