--- a/charts/shkeeper/templates/persistentvolumeclaims/litecoind.yaml
+++ b/charts/shkeeper/templates/persistentvolumeclaims/litecoind.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: litecoind-claim
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   storageClassName: {{ .Values.storageClassName }}
   accessModes:
