--- a/charts/shkeeper/templates/persistentvolumeclaims/polygon-fullnode.yaml
+++ b/charts/shkeeper/templates/persistentvolumeclaims/polygon-fullnode.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: heimdall-config-volume
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   storageClassName: {{ .Values.storageClassName }}
   accessModes:
@@ -16,7 +16,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: bor-config-volume
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   storageClassName: {{ .Values.storageClassName }}
   accessModes:
