--- a/charts/shkeeper/templates/persistentvolumeclaims/tron-shkeeper.yaml
+++ b/charts/shkeeper/templates/persistentvolumeclaims/tron-shkeeper.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: tron-shkeeper-data
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   storageClassName: {{ .Values.storageClassName }}
   accessModes:
@@ -16,7 +16,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: tron-shkeeper-redis-data
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   storageClassName: {{ .Values.storageClassName }}
   accessModes:
