--- a/charts/shkeeper/templates/secrets/rpcvalues.yaml
+++ b/charts/shkeeper/templates/secrets/rpcvalues.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: bitcoin-rpc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   annotations:
     secret-generator.v1.mittwald.de/autogenerate: password
 data:
@@ -16,7 +16,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: litecoin-rpc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   annotations:
     secret-generator.v1.mittwald.de/autogenerate: password
 data:
@@ -28,7 +28,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: dogecoin-rpc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   annotations:
     secret-generator.v1.mittwald.de/autogenerate: password
 data:
@@ -40,7 +40,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: usdt-rpc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   annotations:
     secret-generator.v1.mittwald.de/autogenerate: password
 data:
@@ -52,7 +52,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: eth-rpc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   annotations:
     secret-generator.v1.mittwald.de/autogenerate: password
 data:
@@ -64,7 +64,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: bnb-rpc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   annotations:
     secret-generator.v1.mittwald.de/autogenerate: password
 data:
@@ -76,7 +76,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: xrp-rpc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   annotations:
     secret-generator.v1.mittwald.de/autogenerate: password
 data:
@@ -88,7 +88,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: polygon-rpc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   annotations:
     secret-generator.v1.mittwald.de/autogenerate: password
 data:
@@ -100,7 +100,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: avalanche-rpc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   annotations:
     secret-generator.v1.mittwald.de/autogenerate: password
 data:
