--- a/charts/shkeeper/templates/secrets/shkeeper-btc-key.yaml
+++ b/charts/shkeeper/templates/secrets/shkeeper-btc-key.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: shkeeper-btc-key
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   annotations:
     secret-generator.v1.mittwald.de/autogenerate: password
 data:
