--- a/charts/shkeeper/templates/services/bitcoind.yaml
+++ b/charts/shkeeper/templates/services/bitcoind.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: bitcoind
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   ports:
   - name: jsonrpc
