--- a/charts/shkeeper/templates/services/litecoind.yaml
+++ b/charts/shkeeper/templates/services/litecoind.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: litecoind
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   ports:
   - name: jsonrpc
