--- a/charts/shkeeper/templates/services/shkeeper.yaml
+++ b/charts/shkeeper/templates/services/shkeeper.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/name: shkeeper
     app.kubernetes.io/managed-by: Helm
   name: shkeeper
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   ports:
   - name: http
@@ -25,7 +25,7 @@ metadata:
     app.kubernetes.io/name: shkeeper
     app.kubernetes.io/managed-by: Helm
   name: shkeeper-external
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   externalTrafficPolicy: Cluster
   ports:
