--- a/charts/shkeeper/templates/services/tron-fullnode.yaml
+++ b/charts/shkeeper/templates/services/tron-fullnode.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: java-tron
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   selector:
     app: java-tron
