--- a/charts/shkeeper/templates/services/tron-shkeeper.yaml
+++ b/charts/shkeeper/templates/services/tron-shkeeper.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tron-shkeeper
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   selector:
     app: tron-shkeeper
