--- a/charts/shkeeper/templates/services/xrp-shkeeper.yaml
+++ b/charts/shkeeper/templates/services/xrp-shkeeper.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: xrp-shkeeper
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   selector:
     app: xrp-shkeeper
